<resources>
    <string name="disable_qrcode">Disable QRcode</string>
    <string name="enable_qrcode">Enable QRcode</string>
    <string name="disable_led">Disable LED</string>
    <string name="enable_led">Enable LED</string>
    <string name="single_shot">Single Shot</string>
    <string name="loop_scan">Loop Scan</string>
    <string name="timeout">TimeOut</string>
    <string name="output_method">Output method</string>
    <string name="single_barcode">Single Barcode</string>
    <string name="multi_barcode">Multi Barcode</string>
    <string name="normal_scan">Normal Scan</string>
    <string name="precision_1d">Precision 1D</string>
    <string name="no_prefix">No prefix</string>
    <string name="prefix_lt"><![CDATA[Prefix: <]]></string>
    <string name="no_suffix">No suffix</string>
    <string name="suffix_gt"><![CDATA[Suffix: >]]></string>
    <string name="suspend">Suspend</string>
    <string name="resume">Resume</string>
    <string name="scan">Press down to Scan</string>
    <string name="scanloop">Click to start/stop Scan</string>
    <string name="app_name">DemoApp</string>
    <string name="aim_always_off">Aimer Off</string>
    <string name="aim_trigger_on">Aimer Trigger On</string>
    <string name="flash_illumonly">Illume Only</string>
    <string name="flash_illumstrobe">Strobe</string>
    <string name="active_license">Active license</string>
    <string name="get_last_image">GetImage</string>
    <string name="custom_broadcast">custom broadcast</string>
    <string name="need_set_output_mode">Need to set the output mode to OutputMethod.BROADCAST or OutputMethod.BROADCAST_KEYBOARD or OutputMethod.BROADCAST_CLIPBOARD</string>
    <string name="fail_notification">Fail notification</string>
    <string name="export_settings">Export Settings</string>
    <string name="effective_profile">Set effective Profile</string>
    <string name="save_settings">Save settings</string>
    <string name="sure">Sure</string>
    <string name="cancel">Cancel</string>
    <string name="version_match">Version check:</string>
    <string name="version_match_error">The SDK version does not correspond to the service version, and continuing to use it carries a risk of crashing.</string>
    <string name="ok">OK</string>
    <string name="barcode_options">Barcode options</string>

    <!-- Scan Settings -->
    <string name="function_options">Function options</string>
    <string name="pref_group_control_options_title">Control options</string>
    <string name="text_scan_timeout">Max scan time: </string>
    <string name="text_scan_trigger_mode">Scan Trigger Mode: </string>
    <string name="text_data_receive_method">Output mode: </string>
    <string name="text_multibarcode_num">MultiBarcodes limit: </string>
    <string name="text_multibarcode_exactly_num">Fixed number of Barcodes</string>
    <string name="text_scan_viewsize">Decode region size: </string>
    <string name="setting_loop_scanning_enable">Loop scan</string>
    <string name="setting_loop_scanning_interval">Loop scan interval(ms)</string>
    <string name="loop_interval_default">1000ms</string>
    <string name="pref_broadcast_title">Settings broadcast options</string>
    <string name="text_scan_result_action">Scan Result Action</string>
    <string name="text_scan_result_data_key">Scan Result Data Key</string>
    <string name="pref_scan_notification_title">Scan notification: </string>
    <string name="text_success_notification">Success notification: </string>
    <string name="text_fail_notification">Fail notification: </string>
    <string name="text_notification_led_switch">Notification LED enable</string>
    <string name="pref_flash_enable_title">Lights control</string>
    <string name="aim_light_enable">Aiming light: </string>
    <string name="illume_light_enable">Illuminating light: </string>
    <string name="strobe_light_brightness">Strobe brightness: </string>
    <string name="pref_scankey_enable_title">Scan key options</string>
    <string name="text_left_scankey">Left scan key</string>
    <string name="text_process_result">Result process</string>
    <string name="prefix_char">Prefix char: </string>
    <string name="suffix_char">Suffix char: </string>
    <string name="letter_case">Letter case: </string>
    <string name="text_import_export">Settings management</string>
    <string name="text_import">Import settings</string>
    <string name="text_export">Export settings</string>

    <!-- Barcode Settings -->
    <string name="txt_barcode_enable">Enable</string>
    <string name="txt_ean13">EAN-13</string>
    <string name="transmit_check_digit">Transmit check digit</string>
    <string name="check_digit_options">Check digit options</string>
    <string name="digit_addenda_2">2 Digit Addenda</string>
    <string name="digit_addenda_5">5 Digit Addenda</string>
    <string name="addenda_required">Addenda Required</string>
    <string name="addenda_add_separator">Addenda add Separator</string>
    <string name="txt_matrix25">MATRIX25</string>
    <string name="txt_upcA">UPC-A</string>
    <string name="number_system">Number system digit</string>
    <string name="upca_convert_to_ean13">Convert to EAN13</string>
    <string name="txt_code39">Code39</string>
    <string name="transmit_start_stop_char">Transmit start/stop char</string>
    <string name="code39_full_asc">Code 39 Full ASCII</string>
    <string name="code39_base32">Code39 Base32 decode</string>
    <string name="max_length_tip_1_127">Maximum length(1-127)</string>
    <string name="min_length_tip_1_127">Minimum length(1-127)</string>
    <string name="txt_data_matrix">DATA MATRIX</string>
    <string name="text_with_separators">With Separators</string>
    <string name="setting_max_output_length">Max out length (0: no limit)</string>
    <string name="txt_ean8">EAN-8</string>
    <string name="txt_code11">Code11</string>
    <string name="code11_max_length_tip">Maximum length(6-127)</string>
    <string name="code11_min_length_tip">Minimum length(6-127)</string>
    <string name="txt_code49">Code49</string>
    <string name="txt_code93">Code93</string>
    <string name="max_length_tip_2_127">Maximum length(2-127)</string>
    <string name="min_length_tip_2_127">Minimum length(2-127)</string>
    <string name="txt_code128">Code128</string>
    <string name="txt_codabar">Codabar</string>
    <string name="min_length_tip_4_127">Minimum length(4-127)</string>
    <string name="txt_gs1_128">GS1-128</string>
    <string name="txt_gs1_databar">GS1 DATABAR</string>
    <string name="text_gs1_expanded">GS1 DataBar Expanded</string>
    <string name="text_gs1_limited">GS1 DataBar Limited</string>
    <string name="txt_itf25">ITF25</string>
    <string name="txt_msi">MSI</string>
    <string name="min_length_tip_0_55">Minimum length(0-55)</string>
    <string name="txt_qrcode">QR CODE</string>
    <string name="text_mqr_enable">MicroQR Enable</string>
    <string name="txt_upce">UPC-E</string>
    <string name="upce_expand">UPCE expansion</string>

    <string name="text_scan_notification_volume">Scanning prompts volume</string>

    <string name="text_datamatrix_scan_type">Code type</string>
    <string name="max_length_tip_1_3116">Maximum length(0-3116)</string>
    <string name="max_length_tip_0_7089">Maximum length(0-7089)</string>
</resources>